# haskell-snake

./: Evolution.hs  GameLogic.hs  Main.hs  NeuralNetwork.hs  README.md  SnakeAI.cabal
dist-newstyle/cache/: compiler  config
