cabal-version:      2.4
name:               SnakeGA
version:            0.1.0.0

executable SnakeGA
    main-is:          Main.hs
    other-modules:    GameLogic, 
                      NeuralNetwork, 
                      Evolution
    build-depends:    base >= 4.14 && < 5,
                      gloss >= 1.13,
                      random >= 1.2
    hs-source-dirs:   .
    default-language: Haskell2010
    ghc-options:      -threaded -O2